--- a/templates/index.html
+++ b/templates/index.html
@@ -34,7 +34,7 @@
                 <option value="2">Embeera</option>
               </select>
               
-              <input type="text" name="text1" placeholder="Idioma 1">
+              <input type="text" name="palabrauno" placeholder="">
             </div>
           
             <div class="exchange">
@@ -51,7 +51,7 @@
                 <option value="1">Español</option>
                 <option value="1">Embera</option>
               </select>
-              <input type="text" name="text2" placeholder="Idioma 2" readonly disabled>
+              <input type="text" name="text2" readonly disabled value="{{ traduccion }}">
             </div>
             </div>
           </div>
