--- a/templates/historial.html
+++ b/templates/historial.html
@@ -8,33 +8,30 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="title">
-        <h1>
-            Palabras registradas
-        </h1>
-    </div>
     <div class="content">
-
-        <table>
-            <thead>
-                <tr>                    
-                    <th>Palabra</th>
-                </tr>
-            </thead>
-            <tbody>
-                {% for palabra in data %}
-                <tr>
-                    <td>{{ palabra }}</td>                  
-                </tr>
-                {% endfor %}
-            </tbody>
-        </table>
-        
-    
+        <form action="/historial" method="POST">
+            <section>
+                <div class="title">
+                    <h1>Introducir palabras</h1>
+                </div>
+            </section>
+            <section>
+                <div class="places">
+                    <div class="input">
+                        <input type="text" name="español" placeholder="Español">
+                    </div>
+                    <div class="input">
+                        <input type="text" name="embera" placeholder="Embera">
+                    </div>
+                </div>
+                <br>
+                <div class="submit">
+                    <button type="submit">Guardar</button>
+                </div>
+            </section>
+        </form>
     </div>
-    <div class="content">
+   
 
-    </div>
-    
 </body>
 </html>
