--- a/static/stylehistorial.css
+++ b/static/stylehistorial.css
@@ -8,7 +8,7 @@ body {
   justify-content: center;
   align-items: center;
   width: 80%;
-  margin: 0 auto;
+  margin: 5% auto;
   padding: 20px;
   background-color: #fff;
   border-radius: 10px;
