--- a/templates/index.html
+++ b/templates/index.html
@@ -6,11 +6,16 @@
     <title>Traductor</title>
     <link rel="stylesheet" href="/static/style.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"
+      integrity="sha256-oP6HI9z1XaZNBrJURtCoUT5SUnxFr8s3BzRl+cbzUq8="
+      crossorigin="anonymous"></script>
   </head>
 
   <body>
+    
+   
     <div class="traductor-container">
+     
       <div class="traductorandconfig">
         <div class="traductor-title">
           <h1>Traductor</h1>
@@ -23,49 +28,109 @@
         </div>     
       </div>    
       <div class="form-container">
-        <form action="/" method="POST" id="translate-form" target="_self">
-          <div class="inter">
-          
-          
-          
-          <div class="places">
-            <div class="select">
-              <select name="trd" id="1">
-                <option value="0">Español</option>
-                <option value="1">Embeera</option>
-                <option value="2">Wayuunaiki</option>
-              </select>
+            <form action="/" method="POST" id="translate-form" target="_self">
+              <div class="inter">
               
-              <input type="text" id="input1" name="text1" placeholder="">
-            </div>
-          
-            <div class="exchange">
-              <figure>
-                <img src="/static/src/120846.svg" alt="icono" onclick="cambiarIdiomas()">
-              </figure>
-            
-            </div>
+              
+              
+              <div class="places">
+                <div class="select">
+                  <select name="trd" id="1" onchange="cancelarFuncion()">
+                    <option value="0">Español</option>
+                    <option value="1">Embera</option>
+                    <option value="2">Wayuunaiki</option>
+                  </select>
+                  
+                  <input type="text" id="input1" name="text1">
+                </div>
+                
+
+                <div class="botones">
+                  <div class="vacio"></div>
+                  <div class="exchange">
+                    <figure>
+                      <img src="/static/src/120846.svg" alt="icono" onclick="cambiarIdiomas()">
+                    </figure>
+                  </div>
+                  <div class="tecladomovil">
+                    <div class="tecla">
+                      <figure>
+                        <img src="/static/src/keyboard_119981.svg" alt="teclado">
+                      </figure>
+                    </div>
+                    
+                  </div>
+                 
+                </div>
+              
+
+                
+                <div class="select">
+                  <select name="trd2" id="2" onchange="seleccionarIdioma()">
+                    <option value="0">Español</option>
+                    <option value="1">Embera</option>
+                    <option value="2">Wayuunaiki</option>
+                  </select>
+                  <input  type="text" id="input2" name="text2" readonly disabled>
+                </div>
+              
+                </div>
+              </div>
           
 
+              <div class="teclado" id="mostrar-modal">
+                <figure>
+                  <img src="/static/src/keyboard_119981.svg" alt="teclado" >
+                </figure>
+                
+              </div>
+
+              <div class="but">
+                <button type="submit" id="traducirBtn">Traducir</button>
+              </div>
+
             
-            <div class="select">
-              <select name="trd2" id="2">
-                <option value="0">Español</option>
-                <option value="1">Embera</option>
-                <option value="2">Wayuunaiki</option>
-              </select>
-              <input  type="text" id="input2" name="text2" readonly disabled value="{{ traduccion }}">
-            </div>
-            </div>
-          </div>
-      
-          <div class="but">
-            <button type="submit" id="traducirBtn">Traducir</button>
-          </div>
-        </form>
+
+            </form>
+
       </div>
     </div>
 
+     
+    <div class="modalteclado">
+      <div class="modal-contenidotecla">
+        <div class="keyboard">
+          <!-- Botones para cada letra del teclado virtual -->
+          <div class="key" onclick="writeCharacter('A')">A</div>
+          <div class="key" onclick="writeCharacter('B')">B</div>
+          <div class="key" onclick="writeCharacter('C')">C</div>
+          <div class="key" onclick="writeCharacter('D')">D</div>
+          <div class="key" onclick="writeCharacter('E')">E</div>
+          <div class="key" onclick="writeCharacter('F')">F</div>
+          <div class="key" onclick="writeCharacter('G')">G</div>
+          <div class="key" onclick="writeCharacter('H')">H</div>
+          <div class="key" onclick="writeCharacter('I')">I</div>
+          <div class="key" onclick="writeCharacter('J')">J</div>
+          <div class="key" onclick="writeCharacter('K')">K</div>
+          <div class="key" onclick="writeCharacter('L')">L</div>
+          <div class="key" onclick="writeCharacter('M')">M</div>
+          <div class="key" onclick="writeCharacter('N')">N</div>
+          <div class="key" onclick="writeCharacter('O')">O</div>
+          <div class="key" onclick="writeCharacter('P')">P</div>
+          <div class="key" onclick="writeCharacter('Q')">Q</div>
+          <div class="key" onclick="writeCharacter('R')">R</div>
+          <div class="key" onclick="writeCharacter('S')">S</div>
+          <div class="key" onclick="writeCharacter('T')">T</div>
+          <div class="key" onclick="writeCharacter('U')">U</div>
+          <div class="key" onclick="writeCharacter('V')">V</div>
+          <div class="key" onclick="writeCharacter('W')">W</div>
+          <div class="key" onclick="writeCharacter('X')">X</div>     
+      
+    </div>
+       
+      </div>
+    </div>
+      
     <div id="resultado"></div>
 
     <div id="mi-modal" class="modal">
@@ -77,68 +142,102 @@
           </iframe>
         </div>
       </div>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/socket.io/4.4.1/socket.io.min.js" integrity="sha512-D1edJHbgs+I/gjKfP+oJZlIS+1g67KjGQ9JtE2nL+uP5Fq+7zhOD8Jp5d7V5xKsgav1+V9XWY4F0qlzsDhRk1A==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-      <script type="text/javascript" charset="utf-8">
-        
-             var socket = io.connect('http://' + document.domain + ':' + location.port);
-            
-            // Recibir el evento 'traduccion' y actualizar el contenido de un elemento HTML con el resultado
-      socket.on('traduccion', function(data) {
-      document.getElementById('resultado').innerHTML = data;
-  });
-            </script>
-  
+<script>
+      $(document).ready(function() {
+        $("#translate-form").submit(function(event) {
+            event.preventDefault();
+            $.ajax({
+                url: "/",
+                type: "POST",
+                data: $("#translate-form").serialize(),
+                success: function(response) {
+                    $("#input2").val(response);
+                },
+                error: function(error) {
+                    console.log(error);
+                }
+            });
+        });
+    });
+      
+      
+
+
+
+      </script>
+
       <script>
-   
-   
+        const botonModal = document.getElementById('mostrar-modal');
+        const modalteclado = document.querySelector('.modalteclado');
+
+  botonModal.addEventListener('click', function() {
+  modalteclado.classList.add('mostrar');
+});
+
+
+      </script>
+      <script>
+  
     
 function cambiarIdiomas() {
 
-   // Obtener los valores actuales de los select
+  
+     // Obtener los valores actuales de los select
 
    let select1 = document.getElementById('1');
    let select2 = document.getElementById('2');
    console.log(select1);
     console.log(select2);
-
-
-   //Guardar los valores de los name de cada select
+    
+     //Guardar los valores de los name de cada select
 
    let name1 = select1.getAttribute('name');
    let name2 = select2.getAttribute('name');
 
+
+  
    //Intercambiar los name de los select:
 
    select1.setAttribute('name', name2);
    select2.setAttribute('name', name1);
 
+
+   // Restaurar el estado de la función activa
+   
+  
+
+
+
    //Intermabiar valores y textos cada select
 
-    let tempText = select1.options[select1.selectedIndex].text;
+    //let tempText = select1.options[select1.selectedIndex].text;
 
   
-  select1.options[select1.selectedIndex].text = select2.options[select2.selectedIndex].text;
+  //select1.options[select1.selectedIndex].text = select2.options[select2.selectedIndex].text;
 
-  select2.options[select2.selectedIndex].text = tempText;
-  console.log(tempText)
+  //select2.options[select2.selectedIndex].text = tempText;
+  //console.log(tempText)
   
 
 
-   //Actualizar los valores de los placeholders de los input
+   //Actualizar el contenido de los input de entrada y salida
 
-   //let placeholder1 = select1.options[select1.selectedIndex].text;
-   //let placeholder2 = select2.options[select2.selectedIndex].text;
+      // Obtener los valores de los inputs
+      var input1Value = $("#input1").val();
+      var input2Value = $("#input2").val();
 
-   //document.getElementById('input1').setAttribute('placeholder', placeholder1);
+       // Intercambiar los valores
+       $("#input1").val(input2Value);
+       $("#input2").val(input1Value);
 
-   //document.getElementById('input2').setAttribute('placeholder', placeholder2);
-
-
-
-
-
+      
 
 }
+
+
+
+
+  //MODAL DE LOGIN
 
 const btnAbrir = document.getElementById('btn-abrir');
 const modal = document.getElementById('mi-modal');
