--- a/static/stylelogin.css
+++ b/static/stylelogin.css
@@ -1,13 +1,45 @@
    /* Estilos generales */
    * {
+    padding: 0;
+    margin: 0;
     box-sizing: border-box;
 }
 
 body {
+    position: relative;
     margin: 0;
     padding: 0;
     font-family: Arial, sans-serif;
-    background-color: #f2f2f2;
+    background-image: url(/static/src/9386530_4126559.jpg);
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
+    background-size: cover;
+    background-repeat: no-repeat;
+    ;
+    
+    
+      }
+
+
+
+
+
+
+
+.container {
+    margin-top: 10%;
+}
+
+.title {
+    width: 100%;
+    border-radius: 20px;
+    height: 100%;
+    margin-bottom: 20%;
+    color: #4d4d4d;
+    font-family:'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    font-weight: bolder;
+    font-size: 15pt;
 }
 
 /* Contenedor del formulario */
@@ -18,6 +50,7 @@ body {
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0 0 10px rgba(0,0,0,0.2);
+    margin-top: 10%;
 }
 
 /* Estilos para el formulario */
@@ -25,6 +58,8 @@ body {
     display: flex;
     flex-direction: column;
 }
+
+
 
 .login-container input[type="text"],
 .login-container input[type="password"] {
@@ -39,11 +74,11 @@ body {
 .login-container input[type="text"]:focus,
 .login-container input[type="password"]:focus {
     outline: none;
-    border-color: #0059ff;
+    border-color: #ffae00;
 }
 
 .login-container button[type="submit"] {
-    background-color: #0059ff;
+    background-color: #ffae00;
     color: #fff;
     border: none;
     padding: 10px 20px;
@@ -54,7 +89,7 @@ body {
 }
 
 .login-container button[type="submit"]:hover {
-    background-color: #2d76ff;
+    background-color: #ffd375;
 }
 
 
