--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,10 @@
         </div>
         <div class="configpos">
           <figure>
-            <img src="/static/src/usuario-de-perfil.svg" alt="usuario" data-enlace="/static/ingresar.html" id="btn-abrir">
+           <a href="/ingresar">
+            <img src="/static/src/usuario-de-perfil.svg">
+           </a>
+            
           </figure>
          
         </div>     
@@ -205,6 +208,7 @@ function cambiarIdiomas() {
     
     console.log(value1)
     console.log(value2)
+    
   
 
 
@@ -240,36 +244,6 @@ function cambiarIdiomas() {
 
 }
 
-
-
-
-  //MODAL DE LOGIN
-
-const btnAbrir = document.getElementById('btn-abrir');
-const modal = document.getElementById('mi-modal');
-const modalCerrar = document.getElementsByClassName('modal-cerrar')[0];
-const modalIframe = document.getElementById('mi-iframe');
-
-btnAbrir.addEventListener('click', () => {
-  const enlace = btnAbrir.getAttribute('data-enlace');
-  modalIframe.setAttribute('src', enlace);
-  modal.style.display = 'block';
-});
-
-modalCerrar.addEventListener('click', () => {
-  modal.style.display = 'none';
-});
-
-window.addEventListener('click', (evento) => {
-  if (evento.target == modal) {
-    modal.style.display = 'none';
-  }
-});
-
-    
-
-
-      
     </script>
   </body>
 </html>
