--- a/templates/historial.html
+++ b/templates/historial.html
@@ -15,86 +15,85 @@
 <body>
     <div class="content">
       <div class="word">
-
         <form action="/historial" method="POST" id="form">
-          <section>
               <div class="title">
                   <h2>Introducir palabras</h2>
                   <br>
               </div>
-          </section>
-          <section>
-              <div class="places">
-                  <div class="input">
-                      <input type="text" name="español" placeholder="Agregue palabra en español" required>
-                  </div>
-                  <div class="input">
-                      <input type="text" name="embera" placeholder="Agregue palabra en embera" required>
-                  </div>
-                  <div class="input">
-                    <input type="text" name="wayuu" placeholder="Agregue palabra en wayuunaiky"required>
-                  </div>
+       
+            <div class="places">
+              <div class="input">                
+                <input type="text" name="español" placeholder="Agregue palabra en español" required>
               </div>
+              <div class="input">
+                <input type="text" name="embera" placeholder="Agregue palabra en embera" required>
+              </div>
+              <div class="input">
+                <input type="text" name="wayuu" placeholder="Agregue palabra en wayuunaiky"required>
+                </div>
+            </div>
 
 
               <br>
               <div class="modal fade" id="successModal" tabindex="-1" role="dialog" aria-labelledby="successModalLabel" aria-hidden="true">
-                  <div class="modal-dialog" role="document">
-                    <div class="modal-content">
-                      <div class="modal-header">
-                        <h5 class="modal-title" id="successModalLabel">Mensaje de éxito</h5>
-                        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                          <span aria-hidden="true">&times;</span>
-                        </button>
-                      </div>
-                      <div class="modal-body">
-                        <p>{{ msge }}</p>
-                      </div>
+                <div class="modal-dialog" role="document">                                   
+                  <div class="modal-content">
+                    <div class="modal-header">
+                      <h5 class="modal-title" id="successModalLabel">Mensaje de éxito</h5>
+                      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                      </button>
                     </div>
+                  <div class="modal-body">
+                    <p>{{ msge }}</p>
+                  </div>
                   </div>
                 </div>
+              </div>
               <div class="submit">
                   <button type="submit">Guardar</button>
               </div>
-
+            </form>
                
               </div>      
     
             </div>
-          </section>
-     
 
-      </div>
+      <form action="/eliminar/{{ resultado[3] }}" method="post">
 
-      <div class="tables">
+        <div class="tables">
 
-        <table id="resultado">
-          <thead>
-            <tr>
-              <th>Español</th>
-              <th>Embera</th>
-              <th>Wayuu</th>
-              <th>Acciones</th>
-            </tr>
-          </thead>
-          <tbody>
-            {% for resultado in resultado %}
-            <tr>
-              <td>{{ resultado[0] }}</td>
-              <td>{{ resultado[1] }}</td>
-              <td>{{ resultado[2] }}</td>
-              <td>
-                <a href="/eliminar/{{ resultado[3] }}">Eliminar</a>
-                <a href="/editar/{{ resultado[3] }}">Editar</a>
-              </td>
-            </tr>
-            {% endfor %}
+          <table id="resultado">
+            <thead>
+              <tr>
+                <th>Español</th>
+                <th>Embera</th>
+                <th>Wayuu</th>
+                <th>Acciones</th>
+              </tr>
+            </thead>
+            <tbody>
+              {% for resultado in resultado %}
+              <tr>
+                  <td>{{ resultado[0] }}</td>
+                  <td>{{ resultado[1] }}</td>
+                  <td>{{ resultado[2] }}</td>
+                  <td>
+                      <button type="submit">Eliminar</button>
+                  </td>
+  
+              </tr>
+              {% endfor %}
           </tbody>
-        </table>
+          </table>
+  
+        
+  
+        </div>
 
       </form>
 
-      </div>
+  
       
     </div>
    
